--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.4",
+    "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -28,6 +29,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "ws": "^8.13.0"
   }
 }
